Added tests and improved UI

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./flights.json:/data/flights.json:ro
       - ./backend/app:/app/app
+      - ./backend/tests:/app/tests
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 
   frontend:
